--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "create-react-app": "^4.0.1",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "forever": "^3.0.4",
     "mongoose": "^5.11.8",
     "qrcode": "^1.4.4"
   }
