replace valid-url with psl

--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "express": "^4.17.1",
     "forever": "^3.0.4",
     "mongoose": "^5.11.8",
-    "qrcode": "^1.4.4",
-    "valid-url": "^1.0.9"
+    "psl": "^1.8.0",
+    "qrcode": "^1.4.4"
   }
 }
